[Header] - Fixing Header problem on size and center
Solving problem that makes the header not centered

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
 .Container {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   position: fixed;
   padding: 28px 18px 0px 18px;
   z-index: 9999;
